fine tuned CSS and fixed nav bar collapse on smaller screen

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 .content{
-    margin-top: 50px;
+    margin-top: 80px;
+    margin-bottom: 20px;
 }
 
 img.thumbnails{
@@ -14,7 +15,7 @@ img.thumbnails{
 }
 
 #authorPicture{
-    width: 300px;
+    width: 80%;
     float: left;
     margin: 10px;
 }
